2009-04-02  Peter Bloomfield

	Make sure that config.h is included before any header that
	refers to a symbol defined there.

	* libbalsa/address-book-gpe.h:
	* libbalsa/body.h:
	* libbalsa/filter-private.h:
	* libbalsa/gmime-stream-gio.h:
	* libbalsa/gmime-stream-gnome-vfs.h:
	* libbalsa/html.h:
	* libbalsa/identity.h:
	* libbalsa/libbalsa.h:
	* libbalsa/libbalsa_private.h:
	* libbalsa/mailbox.h:
	* libbalsa/message.h:
	* libbalsa/mime-stream-shared.h:
	* libbalsa/misc.h:
	* libbalsa/missing.h:
	* libbalsa/rfc3156.h:
	* libbalsa/send.h:
	* libbalsa/server.h:
	* libinit_balsa/Makefile.am:
	* libinit_balsa/assistant_page_defclient.h:
	* src/balsa-app.h:
	* src/balsa-bonobo.h:
	* src/balsa-icons.h:
	* src/balsa-message.h:
	* src/balsa-mime-widget-crypto.h:
	* src/balsa-print-object-header.h:
	* src/main-window.h:
	* src/print.h:
	* src/quote-color.h:
	* src/save-restore.h:
	* src/sendmsg-window.h:
	* libbalsa/libbalsa-conf.c: include config.h.
	* libinit_balsa/assistant_page_defclient.c: ditto.
	* libinit_balsa/assistant_init.c: ditto.

2009-04-02  Peter Bloomfield

	* src/balsa-print-object-decor.c: include config.h.
	* src/balsa-print-object-image.c: ditto.

2009-03-31  Albrecht Dreß

	* libbalsa/rfc2445.c: (libbalsa_vcal_new_from_body,
	date_time_2445_to_time_t): fix "critical" warnings due to
	comparison of wrong variable, and if a line is empty.
	* src/balsa-print-object-default.c:
	(balsa_print_object_default_draw): print the icon top-aligned.
	* src/balsa-print-object-text.c:
	(balsa_print_object_text_calendar): break huge iCal parts over
	multiple pages if necessary.

2009-03-26  Peter Bloomfield

	* libbalsa/missing_time.c: build with enable-threads.

2009-03-19  Peter Bloomfield

	* Makefile.am: install BonoboActivation files only if
	!BUILD_WITH_UNIQUE.
	* src/Makefile.am: ditto.

2009-03-19  Peter Bloomfield

	Build --without-esmtp

	* libbalsa/libbalsa.h: typedef LibBalsaSmtpServer only if
	ENABLE_ESMTP.